Added Book Appointment Section

--- a/client/src/css/nav.module.css
+++ b/client/src/css/nav.module.css
@@ -15,6 +15,7 @@
 .txt{
     color:   #00796B !important;
     font-weight: 500;
+    text-decoration: none;
 }
 .txtt{
     color:    #044941 !important;
